# OpenUSD-setup-vcpkg-template

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md  vcpkg.json
.github/workflows/: tests_linux.yml  tests_macos.yml  tests_windows.yml
OpenUSD-setup-vcpkg/: CMakeLists.txt
OpenUSD-setup-vcpkg/headers/: main.h
OpenUSD-setup-vcpkg/src/: main.cpp
USDTest/: CMakeLists.txt  main.cpp
USDTest/headers/: main.h
USDTest/src/: main.cpp
